fix: Change profile image margin, text was being covered

--- a/src/styles/display.css
+++ b/src/styles/display.css
@@ -16,7 +16,7 @@
 	position: absolute;
 	width: 150px;
 	height: auto;
-	bottom: -5em;
+	bottom: -6.2em;
 	border-radius: 10px;
 	box-shadow: 5px 5px 10px rgb(0, 0, 0, 0.5);
 }
